# ChangeLog for net-mail/cyrus-imap-admin
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/cyrus-imap-admin/ChangeLog,v 1.108 2011/12/18 18:00:27 armin76 Exp $

  18 Dec 2011; Raúl Porcel <armin76@gentoo.org>
  cyrus-imap-admin-2.4.12.ebuild:
  sparc stable wrt #388339

  02 Nov 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  cyrus-imap-admin-2.4.12.ebuild:
  x86 stable wrt bug #388339

  26 Oct 2011; Tony Vroon <chainsaw@gentoo.org> cyrus-imap-admin-2.4.12.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Elijah "Armageddon" El Lazkani in bug #388339.

*cyrus-imap-admin-2.4.12 (06 Oct 2011)

  06 Oct 2011; Eray Aslan <eras@gentoo.org> +cyrus-imap-admin-2.4.12.ebuild:
  version bump

  11 Sep 2011; Eray Aslan <eras@gentoo.org> cyrus-imap-admin-2.4.11.ebuild:
  Fix missing patch - bug #382581

*cyrus-imap-admin-2.4.11 (09 Sep 2011)

  09 Sep 2011; Eray Aslan <eras@gentoo.org> +cyrus-imap-admin-2.4.11.ebuild:
  version bump

*cyrus-imap-admin-2.4.10 (06 Jul 2011)

  06 Jul 2011; Eray Aslan <eras@gentoo.org> +cyrus-imap-admin-2.4.10.ebuild,
  +files/cyrus-imap-admin-2.4.10-ldflags.patch:
  version bump

*cyrus-imap-admin-2.4.9 (22 Jun 2011)

  22 Jun 2011; Eray Aslan <eras@gentoo.org> +cyrus-imap-admin-2.4.9.ebuild,
  +files/cyrus-imap-admin-2.4.9-ldflags.patch:
  Version bump

  22 Jun 2011; Eray Aslan <eras@gentoo.org>
  -files/cyrus-imap-admin-2.2-fPIC.patch,
  -files/cyrus-imap-admin-2.3.14-kolab-annotations.patch:
  Clean up FILESDIR

  21 Jun 2011; Eray Aslan <eras@gentoo.org> metadata.xml:
  Maintainer changed to net-mail with dertobi123's permission

  19 Jun 2011; Eray Aslan <eras@gentoo.org> -cyrus-imap-admin-2.3.14.ebuild,
  -cyrus-imap-admin-2.3.15.ebuild, -cyrus-imap-admin-2.3.16.ebuild:
  Remove vulnerable versions

  19 Jun 2011; Raúl Porcel <armin76@gentoo.org> cyrus-imap-admin-2.4.8.ebuild:
  sparc stable wrt #365909
