@@ -1,24 +1,36 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
 AUX cyrus-imap-admin-2.4.10-ldflags.patch 2168 RMD160 e7393dfae44612c2848888388d54644b33b2f3b7 SHA1 29cf8944b1efc53145f877bb25fc80e26cca0ea3 SHA256 1ff6c9141c4e332dec5784a5516390af7cd2f9859f7844878be081cb95b07dfc
 AUX cyrus-imap-admin-2.4.9-ldflags.patch 2168 RMD160 e7393dfae44612c2848888388d54644b33b2f3b7 SHA1 29cf8944b1efc53145f877bb25fc80e26cca0ea3 SHA256 1ff6c9141c4e332dec5784a5516390af7cd2f9859f7844878be081cb95b07dfc
 DIST cyrus-imapd-2.4.10.tar.gz 2430196 RMD160 d7ffe3ad56b9e565dc7e1b764d4bb0a597ce9696 SHA1 b6cb51d67f2b49536ba92daae471d7817929c482 SHA256 2f5b5c6e524df9005df4a700c958bb99a21c4450485374e38a3d18010bc87317
 DIST cyrus-imapd-2.4.11.tar.gz 2446611 RMD160 0bb30f7d8c655a03366a8ce59f5a708c30d34ec1 SHA1 24fdaf0e57d5c3bdb63b7dcca29fe6df535c6102 SHA256 fe6bbcfd7abe459a0aa88922ef81e41a98dc93b0cf2408b7086356b3ee4c7f70
 DIST cyrus-imapd-2.4.12.tar.gz 2450099 RMD160 5c481d5ce295667eed1c90bc1d0572946caaae29 SHA1 c7a1e1dee9f32891c64499945915e8c4e99ce183 SHA256 b33c348d4d8c0b4d7dd4cd114d2cc53dde6c49be359e9dfd6ce0069cc536366f
+DIST cyrus-imapd-2.4.13.tar.gz 2472668 RMD160 4665d7aa49acb5a5f3d9746ef4cf2c15292a6ff6 SHA1 df06d6d4b2b24d631cbbf1aa6f77a94381ce6bb7 SHA256 89a50769a8eddb65c88bf2449485c183594b391747e8367e2c878633624fbd9c
 DIST cyrus-imapd-2.4.8.tar.gz 2424151 RMD160 72f9afbf7893b3449a1a76b7050ea6d7c9b003c9 SHA1 4dfc328aff482c9ebb4efdce4b140f69564880e8 SHA256 7a1ff733928276d0e42dccfb85f17e6d6d63cdc11c03e93aea19e7de798da030
 DIST cyrus-imapd-2.4.9.tar.gz 2425065 RMD160 37727502f8b080a1e3205360c048abd47e76e878 SHA1 3cc8cf54d43baeda6822f84efec6ab95f3d1c49f SHA256 d757bc95ca891acad3768a888a5022ab96ba72d49445aa12e26b5929822e4156
 EBUILD cyrus-imap-admin-2.4.10.ebuild 1495 RMD160 c2f9d367b8e121412d32aacadc3a4d2262d52af1 SHA1 44967087703405c11c908d38f9414c48552ef6d1 SHA256 764462c381d812aa0c0bcb0a102db957d488fe677044c626f96ffe59df508cce
 EBUILD cyrus-imap-admin-2.4.11.ebuild 1503 RMD160 cc34a96ae9cbd6db0aa2e8d3bf1309a1c0e8e403 SHA1 23945a9603829bec9e586c2862041946a82ae4f6 SHA256 e5b21f72392e60c8a762714013da8ac7ea62004f01119ec560c61425716dc833
 EBUILD cyrus-imap-admin-2.4.12.ebuild 1503 RMD160 eaab8a041b791cd98380f0afdef4bf29991d8718 SHA1 18d013bd85a794dc4073b1151c03cb14aa7dc665 SHA256 51393754b7bc96f5a87f8600a439ca06d2b8f1c29419b9bf27fe71909f7ff926
+EBUILD cyrus-imap-admin-2.4.13.ebuild 1503 RMD160 a107d3029703892e5d0c58b153fff0713893804c SHA1 1f570621ef171e5b24f1ad98c7cc7d4645b0189d SHA256 661bea91a57128affb01b53f3ae7c5ab2b4d6f634ec8658fae98c093d9e874ff
 EBUILD cyrus-imap-admin-2.4.8.ebuild 1427 RMD160 a51ab5ad13e819180dcaa74a9515edf7ef43e985 SHA1 ffa2fd39f4c4055269d14248e8e3e51bd19ad860 SHA256 9fc97f0339a0c37af0ce7cec4d1753a4ba248c74a453ee993c5fdf38a12a1dca
 EBUILD cyrus-imap-admin-2.4.9.ebuild 1569 RMD160 9f9638013321684c66de4b2fe611dd12190b5f99 SHA1 dcc9321bb4b452101f4018728d1a022cb9238e48 SHA256 29cc40b97bb0e0a0df2136968a9dad407bfb49f26579e3258d2f4c8b501dd3b0
-MISC ChangeLog 15943 RMD160 9962a576a47c870e440e2747e7b6fadeba97a4e4 SHA1 cf31ef95bec37ada68dd53b44c00d6846aab9871 SHA256 4a4dcb6f60f4c5786a5b01809f70339733d78d244a000264f8cdda0af706b549
+MISC ChangeLog 16073 RMD160 05237efa8d48a34645b8e3426ef17309cd4c1b13 SHA1 db859386e9be4e9ddf4faa6e921c8739452a068a SHA256 5640f0e9ba13427522c6a08103524a021b58c44caa4e96a9c6a09dabc2cee077
 MISC metadata.xml 161 RMD160 273e570423fa3cd9d3f15f7967a43307c8ee9661 SHA1 a1fecd2f7b169d621b88c6ccab9d758209fc8f19 SHA256 4ebf9a8f60040bfb95f13790c1d146a49c69f791f9c421e02a5d96fd6fcb2b32
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.17 (GNU/Linux)
+Version: GnuPG v2.0.18 (GNU/Linux)
 
-iEYEARECAAYFAk7uKkEACgkQuQc30/atMkADFgCfT9VAx9sH4p7ep8iA7/nlwZ5C
-yX0Anje2vCB+rQvMBdIApCgjx7qDaIds
-=9XQs
+iQIcBAEBCAAGBQJPBA1bAAoJEHfx8XVYajsfAGsP+gJeW6hgqU62Y8VEpf7tutXF
+b3pbaRVzNcJ03cLdOnmq2H0NLQrvOR7b5SbguUuQ3UrpDn608iMnxRCJDrLJZeUd
+hn2GZCbVlQ0WQ35oBGv9lvwxuwuBTCs4/Hn1v1Gs+g3sqypWdt6sGeSj2WvKF/tL
+Vvr817cTTOkMaHwFWKiXbmAImglN7tDHHg5z9CAV5brpqssbG/Qmpd9yKELmeOXQ
+ZAHBY9TtbsbAV4Cackc95mAinOWLDFo1Zw5kSC72ga8oV4zYLcHAgbjrcboaH0sX
+Hk/OWzjMkm0V3LRWqwKXyWrCLX4NJRpQnE2AafLpYrBzL6WhS2FkDggiS7VT9UUJ
+HZ/XzHGABBmSTPD1DjMG5IZx8WJEkxMofyLNhCi8iTx8IqgbOOzLMSB2Iiy2V20o
+Q93v/heBRo+F6FDHjiyHOQSd7foienImIIQHKmxX56ncKwVFE+JXurNgmR+4fgyB
+AYdGlVckEaCfnRAyVJQQ2avTFDzGKAU/MkND8+ltuhVZp5LcpFfapbJTlIrnnUvL
+2078h/ictH/r4CS0RhVauPhVgD8Wutv7yjS8L9Qw8W9ex6950ymdrkYMbxVSJflu
+itt6OQaR4r40hgrpiECX5CyT/t9BUqEtEOEd/F9W6PeIMzWxU8JDjFH8KBPNAut2
+KdCeqxTO4/Lh2ECHDSaG
+=mMfd
 -----END PGP SIGNATURE-----
