@@ -1,6 +1,11 @@
 # ChangeLog for net-mail/cyrus-imap-admin
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/cyrus-imap-admin/ChangeLog,v 1.108 2011/12/18 18:00:27 armin76 Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-mail/cyrus-imap-admin/ChangeLog,v 1.109 2012/01/04 08:26:53 eras Exp $
+
+*cyrus-imap-admin-2.4.13 (04 Jan 2012)
+
+  04 Jan 2012; Eray Aslan <eras@gentoo.org> +cyrus-imap-admin-2.4.13.ebuild:
+  version bump
 
   18 Dec 2011; Raúl Porcel <armin76@gentoo.org>
   cyrus-imap-admin-2.4.12.ebuild:
